--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-jwt": "^0.1.9",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ngx-chips": "^1.5.3",
     "rxjs": "^5.4.2",
     "socket.io-client": "^2.0.3",
     "zone.js": "^0.8.14"
